--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -51,7 +51,7 @@
   --spacing-xxl: 3rem;
   
   /* Container */
-  --container-max: 1200px;
+  --container-max: 1600px;
   --header-height: 70px;
 }
 
